
SUBDIRS=

SUBDIRS+= LargeLexer
SUBDIRS+= ZeroLengthToken
SUBDIRS+= Slashes
SUBDIRS+= RefToRuleDoesNotSetTokenNorEmitAnother
SUBDIRS+= RecursiveLexerRuleRefWithWildcardStar_2
SUBDIRS+= RecursiveLexerRuleRefWithWildcardStar_1
SUBDIRS+= RecursiveLexerRuleRefWithWildcardPlus_2
SUBDIRS+= RecursiveLexerRuleRefWithWildcardPlus_1
SUBDIRS+= QuoteTranslation
SUBDIRS+= PositionAdjustingLexer
SUBDIRS+= Parentheses
SUBDIRS+= NonGreedyTermination2
SUBDIRS+= NonGreedyTermination1
SUBDIRS+= NonGreedyPositiveClosure
SUBDIRS+= NonGreedyOptional
SUBDIRS+= NonGreedyConfigs
SUBDIRS+= NonGreedyClosure
SUBDIRS+= KeywordID
SUBDIRS+= HexVsID
SUBDIRS+= GreedyPositiveClosure
SUBDIRS+= GreedyOptional
SUBDIRS+= GreedyConfigs
SUBDIRS+= GreedyClosure
SUBDIRS+= EOFSuffixInFirstRule_2
SUBDIRS+= EOFSuffixInFirstRule_1
SUBDIRS+= EOFByItself
SUBDIRS+= CharSetWithQuote2
SUBDIRS+= CharSetWithQuote1
SUBDIRS+= CharSetWithMissingEscapeChar
SUBDIRS+= CharSetWithMissingEndRange
SUBDIRS+= CharSetWithEscapedChar
SUBDIRS+= CharSetRange
SUBDIRS+= CharSetPlus
SUBDIRS+= CharSetNot
SUBDIRS+= CharSetInSet
SUBDIRS+= CharSet
SUBDIRS+= ActionPlacement

lexer_exec_tests= \
    ActionPlacement/lexer_exec_action_placement \
    CharSet/lexer_exec_char_set \
    $(NULL)

#TESTS=$(lexer_exec_tests)
