
SUBDIRS=
#SUBDIRS+= ReferenceToATN_2
#SUBDIRS+= ReferenceToATN_1
#SUBDIRS+= PredictionIssue334

# When ok, fix Makefile.am: bin_PROGRAMS to check_PROGRAMS
#SUBDIRS+= PredicatedIfIfElse

#SUBDIRS+= ParserProperty
#SUBDIRS+= Optional_4
#SUBDIRS+= Optional_3
#SUBDIRS+= Optional_2
#SUBDIRS+= Optional_1
#SUBDIRS+= MultipleEOFHandling
#SUBDIRS+= ListLabelsOnSet
#SUBDIRS+= ListLabelForClosureContext
#SUBDIRS+= Labels
#SUBDIRS+= LabelAliasingAcrossLabeledAlternatives
#SUBDIRS+= LL1OptionalBlock_2
#SUBDIRS+= LL1OptionalBlock_1
#SUBDIRS+= IfIfElseNonGreedyBinding2
#SUBDIRS+= IfIfElseNonGreedyBinding1
#SUBDIRS+= IfIfElseGreedyBinding2
#SUBDIRS+= IfIfElseGreedyBinding1
#SUBDIRS+= EOFInClosure
#SUBDIRS+= Basic
#SUBDIRS+= AorBStar_2
#SUBDIRS+= AorBStar_1
SUBDIRS+= AorBPlus
SUBDIRS+= AorB
SUBDIRS+= AorAStar_2
SUBDIRS+= AorAStar_1
SUBDIRS+= AorAPlus
SUBDIRS+= AStar_2
SUBDIRS+= AStar_1
SUBDIRS+= APlus

#			System.out.println(_input.getText(_localctx.start, _input.LT(-1)));
